--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "npx mocha \"src/**/*.test.js\" --recursive --require @babel/register"
+		"test": "npx mocha \"src/**/*.test.js\" --recursive --require @babel/register --file src/mocha-setup.js"
 	},
 	"repository": {
 		"type": "git",
@@ -23,12 +23,14 @@
 		"@babel/node": "^7.15.4",
 		"@babel/preset-env": "^7.15.6",
 		"@babel/register": "^7.15.3",
-		"babel-plugin-lodash": "^3.3.4",
 		"chai": "^4.3.4",
-		"mocha": "^9.1.1"
+		"mocha": "^9.1.1",
+		"regenerator-runtime": "^0.13.9",
+		"supertest": "^6.1.6"
 	},
 	"dependencies": {
+		"express": "^4.17.1",
 		"lodash": "^4.17.21",
-		"lodash-node": "^3.10.2"
+		"mongodb": "^4.1.2"
 	}
 }
