--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@babel/node": "^7.15.4",
 		"@babel/preset-env": "^7.15.6",
 		"@babel/register": "^7.15.3",
+		"babel-plugin-lodash": "^3.3.4",
 		"chai": "^4.3.4",
 		"mocha": "^9.1.1",
 		"regenerator-runtime": "^0.13.9",
